# agents-workshop-for-dev-sec-ops

./: .env_sample  .gitignore  00_Environment_Prerequisites.md  0_welcome.ipynb  1_simple_llm_langchain.ipynb  2_react_prompt_langchain.ipynb  3_dev_solo_crewai.ipynb  3_react_tools_langchain.ipynb  4_dev_ops_crewai.ipynb  4_dev_solo_crewai.ipynb  5_dev_ops_crewai.ipynb  5_dev_sec_ops_langgraph_crewai.ipynb  6_dev_sec_ops_langgraph_crewai.ipynb  7_simple_pydantic_crew.ipynb  Makefile  README.md  _agents.py  _callbacks.py  _models.py  _settings.py  _tools.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
