[tool.poetry]
name = "workshop-agents"
version = "0.1.0"
description = ""
authors = ["Patrick Debois <Patrick.Debois@jedi.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
